--- a/.github/build-and-publish.yml
+++ b/.github/build-and-publish.yml
@@ -6,8 +6,9 @@ on:
       - main
 
 jobs:
-  build-and-publish:
+  build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -15,11 +16,12 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
-      - name: Build Docker image
-        run: docker build -t your-docker-hub-username/nginx-static-website:latest .
-
-      - name: Push Docker image
-        run: docker push your-docker-hub-username/nginx-static-website:latest
+      - name: Build and push Docker image
+        run: |
+          docker-compose -f docker-compose-prod.yml build
+          docker-compose -f docker-compose-prod.yml push
+        env:
+          DOCKER_CLI_ACI: "1"
